# vkoga2

./: .gitignore  README.md  __init__.py  data.py  distances.py  history.py  kernels.py  model_selection.py  point_selection.py  pyproject.toml  solver.py  validation.py  vkoga2_usage_note.md
