[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "vkoga2"
version = "0.1.0"
description = "VKOGA-style greedy kernel solver core v2"
requires-python = ">=3.10"
dependencies = [
    "numpy",
]

[tool.setuptools]
packages = ["vkoga2"]
package-dir = { "vkoga2" = "." }
